# gender-definer

./: .gitignore  README.md  pyproject.toml
genderdefiner/: __init__.py  enums.py  genderdefiner.py  types.py
